--- a/html/INDEX/jeu_video.html
+++ b/html/INDEX/jeu_video.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="../../css/style.css" id="theme-link">
 		<link rel="stylesheet" href="../../css/jeu.css">
 		<link rel="stylesheet" href="../../css/flickity.css">
+		<link rel="stylesheet" href="../../css/dut mmi.css">
 
 	    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 	    <script src="../../js/flickity.pkgd.js"></script>
@@ -36,13 +37,14 @@
 	<p class="presentation_text">Ici, vous pourrez retrouver les jeux vidéos (commencés ou finis) dont j'ai contribué à la création.</p>
 </div>
 
-<div class="jeu_total"> 
-    <a class="lien_jeu" href="../DUT MMI/scratch.html">	
-        <img class="jeu_image" src="../../RESSOURCES/2 - Scratch/Ecran titre.jpg" alt="Photomontage d'une falaise en bord de mer. Mongolfière, pont, plage, baie."/>
-    </a>
-    <a class="lien_jeu">	
-        <img class="jeu_image" src="../../RESSOURCES/0 - Photomontages/P2.jpg" alt="Photomontage d'un vaisseau en train de s'écraser sur une planète inconnue. Soleil, flammes, sable, violet."/>
-        <p class="date_jeu"><span class="contour"> | </span>Octobre 2018<span class="contour"> | </span></p>
+<div class="jeu_ligne_case">
+	<a class="dut_projet" href="../../html/DUT MMI/scratch.html">
+		<img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Room 203.jpg"/>
+		<p class="DUT_MMI_image_titre"><span class="contour"> | </span>Room 203<span class="contour"> | </span></p>
+	</a>	
+	<a class="dut_projet" href="../../html/DUT MMI/scratch.html">
+		<img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Cristal's quest.jpg"/>
+		<p class="DUT_MMI_image_titre"><span class="contour"> | </span>Cristal's Quest<span class="contour"> | </span></p>
 	</a>
 </div>
 <!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
