--- a/html/INDEX/web.html
+++ b/html/INDEX/web.html
@@ -35,38 +35,21 @@
 
 
 <!--------------------------------------------------- PHOTOGRAPHIES ------------------------------------------------>
-<p class="presentation_text">Voilà quelques photos que j'ai prise.</p>
+<p class="presentation_text">Création de site.</p>
 
-<div class="gallerie">
 <div class="dut_ligne_case">
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I1.jpg"/></a> 
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I2.jpg"/></a>
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I16.jpg"/></a>
-</div>
-<div class="dut_ligne_case">
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I3.jpg"/></a>
-</div>
-<div class="dut_ligne_case">
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I4.jpg"/></a> 
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I6.jpg"/></a>
-</div>
-<div class="dut_ligne_case">
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I7.jpg"/></a> 
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I8.png"/></a>
-			<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I10.jpg"/></a>
-</div>
-<div class="dut_ligne_case">
-	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I14.jpg"/></a>
-</div>
-<div class="dut_ligne_case">
-	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I13.jpg"/></a>
-	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I12.jpg"/></a>
-	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I11.jpg"/></a> 
-</div>
-<div class="dut_ligne_case">
-	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I5.jpg"/></a> 
-	<a class="dut_projet"> <img class="gallerie_photo" src="../../RESSOURCES/0 - Photographies/I17.jpg"/></a>
-</div>
+	<a class="dut_projet" href="../../html/DUT MMI/scratch.html">
+		<img class="dut_projet_image" src="../../RESSOURCES/0 - Web/Musée d'Aquitaine.jpg"/>
+		<p class="DUT_MMI_image_titre"><span class="contour"> | </span>Musée d'Aquitaine<span class="contour"> | </span></p>
+	</a>
+	<a class="dut_projet" href="../../html/DUT MMI/scratch.html">
+		<img class="dut_projet_image" src="../../RESSOURCES/0 - Web/Tech'art.jpg"/>
+		<p class="DUT_MMI_image_titre"><span class="contour"> | </span>Tech'art<span class="contour"> | </span></p>
+	</a>	
+	<a class="dut_projet" href="../../html/DUT MMI/scratch.html">
+		<img class="dut_projet_image" src="../../RESSOURCES/0 - Web/Portfolio.jpg"/>
+		<p class="DUT_MMI_image_titre"><span class="contour"> | </span>Portfolio<span class="contour"> | </span></p>
+	</a>
 </div>
 
 <!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
