--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 				 <img class="couverture" src="./RESSOURCES/Couverture_Web.jpg"/>
 				 <p class="category_title"><span class="contour"> | </span>WEB<span class="contour"> | </span></p>
 			</a>
-			<a class="lien_image" href="./html/INDEX/ecriture.html">
+			<!--a class="lien_image" href="./html/INDEX/ecriture.html">
 				<img class="couverture" src="./RESSOURCES/Couverture_Ecriture.jpg"/>
 				<p class="category_title"><span class="contour"> | </span>ÉCRITURE<span class="contour"> | </span></p>
-		   </a>
+		   </a-->
 		</div>
 		
 <!---------------------------------------------- CARROUSSEL PHOTOMONTAGES -------------------------------------------------
