réseaux sociaux fix

--- a/html/DUT MMI/infographie.html
+++ b/html/DUT MMI/infographie.html
@@ -28,7 +28,7 @@
 	<ul>
 		<li><a href="../../index.html">ACCUEIL</a></li>
  		<!--li><a href="./html/dut mmi.html">DUT MMI</a></li-->
-		 <li><a href="i - projets perso.html">PROJETS PERSO</a></li>
+		<li><a href="../../html/presentation.html">PRÉSENTATION</a></li>
 	</ul>
 </div>
 
@@ -47,7 +47,7 @@
 <div class="row_simple">
 	<div class="column_simple" id="half">
 		<p class="explication_text">En début d'année, nous avons eu un atelier d'infographie. Le but était de concevoir une couverture d'album pour le groupe de son choix. J'ai choisi Imagine Dragons et ai décidé de refaire la couverture de leur album "Origins". Pour ce projet, nous devions utiliser Photoshop et Illustrator. J'ai d'abord réalisé l'illustration de ma cover (vidéo à droite), puis je l'ai adapté à des mockups.</p>
-		<p class="explication_text">C'est un atelier que j'ai particulièrement apprécié puisque je réalisais déjà des illustrations du même type durant mon temps libre (voir : <a class="lien" href="i - projets perso.html">Photomontages</a>).</p>
+		<p class="explication_text">C'est un atelier que j'ai particulièrement apprécié puisque je réalisais déjà des illustrations du même type durant mon temps libre (voir : <a class="lien" href="../INDEX/photomontage.html">Photomontages</a>).</p>
 	</div>
 	<div class="column-simple video" id="half">
 		<iframe width="650" height="400" class="video" src="https://www.youtube.com/embed/JyeG7LvVOWo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -68,22 +68,22 @@
 		<p class="explication_text">L'exercice était marrant et comme toujours, j'ai beaucoup appris en pratiquant.</p>
 	</div>
 </div>
-<!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
-<section class="social_menu">
-	<!------------------ ICONES RÉSEAUX -->
-	<ul>
-    	<li><a href="https://www.linkedin.com/in/alvina-damasio-razafiarizaka-510a981b8"><i class="fa fa-linkedin"></i></a></li>
-    	<li><a href="https://www.instagram.com/alvina.j.dr/"><i class="fa fa-instagram"></i></a></li>
-    	<li><a href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA"><i class="fa fa-youtube"></i></a></li>
-  	</ul>
-</section>
 
 <!------------------------------------------------------ FOOTER ------------------------------------------------>
 <footer>
 	<!-------------------- BY ME --------------------------->
 	<div class="by">
-		<p class="by_text">By Alvina DAMASIO--RAZAFIARIZAKA<p>
+		<p class="by_text">By Alvina DAMASIO--RAZAFIARIZAKA<p></p>
+			<section class="social_menu">
+				<!------------------ ICONES RÉSEAUX -->
+				<ul>
+					<li><a href="https://www.linkedin.com/in/alvina-damasio-razafiarizaka-510a981b8"><i class="fa fa-linkedin"></i></a></li>
+					<li><a href="https://www.instagram.com/alvina.j.dr/"><i class="fa fa-instagram"></i></a></li>
+					<li><a href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA"><i class="fa fa-youtube"></i></a></li>
+				  </ul>
+			</section>		
 	</div>
+
 </footer>
 
 <!--------------------------------------------------------------------------------------------------------------->
