--- a/html/presentation.html
+++ b/html/presentation.html
@@ -41,23 +41,21 @@
 		ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
 		pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
-
-<!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
-<section class="social_menu">
-	<!------------------ ICONES RÉSEAUX -->
-	<ul>
-    	<li><a href="https://www.linkedin.com/in/alvina-damasio-razafiarizaka-510a981b8"><i class="fa fa-linkedin"></i></a></li>
-    	<li><a href="https://www.instagram.com/alvina.j.dr/"><i class="fa fa-instagram"></i></a></li>
-    	<li><a href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA"><i class="fa fa-youtube"></i></a></li>
-  	</ul>
-</section>
-
 <!------------------------------------------------------ FOOTER ------------------------------------------------>
 <footer>
 	<!-------------------- BY ME --------------------------->
 	<div class="by">
-		<p class="by_text">By Alvina DAMASIO--RAZAFIARIZAKA<p>
+		<p class="by_text">By Alvina DAMASIO--RAZAFIARIZAKA<p></p>
+			<section class="social_menu">
+				<!------------------ ICONES RÉSEAUX -->
+				<ul>
+					<li><a href="https://www.linkedin.com/in/alvina-damasio-razafiarizaka-510a981b8"><i class="fa fa-linkedin"></i></a></li>
+					<li><a href="https://www.instagram.com/alvina.j.dr/"><i class="fa fa-instagram"></i></a></li>
+					<li><a href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA"><i class="fa fa-youtube"></i></a></li>
+				  </ul>
+			</section>		
 	</div>
+
 </footer>
 
 <!--------------------------------------------------------------------------------------------------------------->
