--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
 			<p class="present_big">Alvina DR</p>
 		</div>
 			<p class="present_date" >[ PORTFOLIO 2021 ]</p>
+			<section class="social_menu index">
+				<ul>
+    				<li><a href="https://www.linkedin.com/in/alvina-damasio-razafiarizaka-510a981b8"><i class="fa fa-linkedin"></i></a></li>
+    				<li><a href="https://www.instagram.com/alvina.j.dr/"><i class="fa fa-instagram"></i></a></li>
+    				<li><a href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA"><i class="fa fa-youtube"></i></a></li>
+  				</ul>
+			</section>
 			<img class="scroll_down" src="./RESSOURCES/scroll_down.png"/>
 	</div>
 		<div class="photomontage_bande">
@@ -90,23 +97,23 @@
 			<a class="DUT_MMI_a" href="j - scratch.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Jeu Scratch.jpg"/></a>
 			<a class="DUT_MMI_a" href="DUT MMI.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Site Web.jpg"/></a>
 			<a class="DUT_MMI_a" href="DUT MMI.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Zelda Like.jpg"/></a>
-</div>
------------------------------------------------------- RÉSEAUX SOCIAUX ------------------------------------------------
-<section class="social_menu">
-	------------------ ICONES RÉSEAUX --
-	<ul>
-    	<li><a href="https://www.linkedin.com/in/alvina-damasio-razafiarizaka-510a981b8"><i class="fa fa-linkedin"></i></a></li>
-    	<li><a href="https://www.instagram.com/alvina.j.dr/"><i class="fa fa-instagram"></i></a></li>
-    	<li><a href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA"><i class="fa fa-youtube"></i></a></li>
-  	</ul>
-</section>
+</div-->
 
------------------------------------------------------- FOOTER ------------------------------------------------>
+<!------------------------------------------------------ FOOTER ------------------------------------------------>
 <footer>
 	<!-------------------- BY ME --------------------------->
 	<div class="by">
-		<p class="by_text">By Alvina DAMASIO--RAZAFIARIZAKA<p>
+		<p class="by_text">By Alvina DAMASIO--RAZAFIARIZAKA<p></p>
+			<section class="social_menu">
+				<!------------------ ICONES RÉSEAUX -->
+				<ul>
+					<li><a href="https://www.linkedin.com/in/alvina-damasio-razafiarizaka-510a981b8"><i class="fa fa-linkedin"></i></a></li>
+					<li><a href="https://www.instagram.com/alvina.j.dr/"><i class="fa fa-instagram"></i></a></li>
+					<li><a href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA"><i class="fa fa-youtube"></i></a></li>
+				  </ul>
+			</section>		
 	</div>
+
 </footer>
 
 <!--------------------------------------------------------------------------------------------------------------->
