--- a/html/INDEX/photomontage.html
+++ b/html/INDEX/photomontage.html
@@ -27,7 +27,7 @@
 	<ul>
 		<li><a href="../../index.html">ACCUEIL</a></li>
  		<!--li><a href="./html/dut mmi.html">DUT MMI</a></li-->
-		<li><a href="../../i - projets perso.html">PROJETS PERSO</a></li>
+		<li><a href="../../html/presentation.html">PRÉSENTATION</a></li>
 	</ul>
 </div>
 <!---------------------------------------------- CARROUSSEL PHOTOMONTAGES ------------------------------------------------>
@@ -74,22 +74,21 @@
     </a>
 
 </div>
-<!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
-<section class="social_menu">
-	<!------------------ ICONES RÉSEAUX -->
-	<ul>
-    	<li><a href="https://www.linkedin.com/in/alvina-damasio-razafiarizaka-510a981b8"><i class="fa fa-linkedin"></i></a></li>
-    	<li><a href="https://www.instagram.com/alvina.j.dr/"><i class="fa fa-instagram"></i></a></li>
-    	<li><a href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA"><i class="fa fa-youtube"></i></a></li>
-  	</ul>
-</section>
-
 <!------------------------------------------------------ FOOTER ------------------------------------------------>
 <footer>
 	<!-------------------- BY ME --------------------------->
 	<div class="by">
-		<p class="by_text">By Alvina DAMASIO--RAZAFIARIZAKA<p>
+		<p class="by_text">By Alvina DAMASIO--RAZAFIARIZAKA<p></p>
+			<section class="social_menu">
+				<!------------------ ICONES RÉSEAUX -->
+				<ul>
+					<li><a href="https://www.linkedin.com/in/alvina-damasio-razafiarizaka-510a981b8"><i class="fa fa-linkedin"></i></a></li>
+					<li><a href="https://www.instagram.com/alvina.j.dr/"><i class="fa fa-instagram"></i></a></li>
+					<li><a href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA"><i class="fa fa-youtube"></i></a></li>
+				  </ul>
+			</section>		
 	</div>
+
 </footer>
 
 <!--------------------------------------------------------------------------------------------------------------->
