--- a/html/INDEX/video.html
+++ b/html/INDEX/video.html
@@ -28,7 +28,7 @@
 		<li><a href="../../index.html">ACCUEIL</a></li>
  		<!--li><a href="./html/dut mmi.html">DUT MMI</a></li-->
 		<link rel="stylesheet" href="../../css/photomontage.css">
-		<li><a href="../../html/projets perso.html">PROJETS PERSO</a></li>
+		<li><a href="../../html/presentation.html">PRÉSENTATION</a></li>
 	</ul>
 </div>
 
@@ -47,22 +47,21 @@
 	<iframe width="960" height="540px"class="video" src="https://www.youtube.com/embed/FRcjSFYnp40" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </div>
-<!------------------------------------------------------ RÉSEAUX SOCIAUX ------------------------------------------------>
-<section class="social_menu">
-	<!------------------ ICONES RÉSEAUX -->
-	<ul>
-    	<li><a href="https://www.linkedin.com/in/alvina-damasio-razafiarizaka-510a981b8"><i class="fa fa-linkedin"></i></a></li>
-    	<li><a href="https://www.instagram.com/alvina.j.dr/"><i class="fa fa-instagram"></i></a></li>
-    	<li><a href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA"><i class="fa fa-youtube"></i></a></li>
-  	</ul>
-</section>
-
 <!------------------------------------------------------ FOOTER ------------------------------------------------>
 <footer>
 	<!-------------------- BY ME --------------------------->
 	<div class="by">
-		<p class="by_text">By Alvina DAMASIO--RAZAFIARIZAKA<p>
+		<p class="by_text">By Alvina DAMASIO--RAZAFIARIZAKA<p></p>
+			<section class="social_menu">
+				<!------------------ ICONES RÉSEAUX -->
+				<ul>
+					<li><a href="https://www.linkedin.com/in/alvina-damasio-razafiarizaka-510a981b8"><i class="fa fa-linkedin"></i></a></li>
+					<li><a href="https://www.instagram.com/alvina.j.dr/"><i class="fa fa-instagram"></i></a></li>
+					<li><a href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA"><i class="fa fa-youtube"></i></a></li>
+				  </ul>
+			</section>		
 	</div>
+
 </footer>
 
 <!--------------------------------------------------------------------------------------------------------------->
