modif jeu vidéo

--- a/html/DUT MMI/crystal.html
+++ b/html/DUT MMI/crystal.html
@@ -9,14 +9,13 @@
 		<title>Alvina Damasio--Razafiarizaka | Projets Perso</title>
 
 		<link rel="stylesheet" href="../../css/style.css" id="theme-link">
-		<link rel="stylesheet" href="../../css/jeu.css">
 		<link rel="stylesheet" href="../../css/flickity.css">
-		<link rel="stylesheet" href="../../css/dut mmi.css">
 
 	    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 	    <script src="../../js/flickity.pkgd.js"></script>
 	    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
 	</head>
+
 	<body>
 <!--------------------------------------------------------- MENU ------------------------------------------------------>
 <div class="navbar">
@@ -31,32 +30,29 @@
 		<li><a href="../../html/presentation.html">PRÉSENTATION</a></li>
 	</ul>
 </div>
-<!------------------------------------------------------ JEU VIDEO ------------------------------------------------------>
-
-<div class="presentation_dut_mmi_case">
-	<p class="presentation_text">Ici, vous pourrez retrouver les jeux vidéos (commencés ou finis) dont j'ai contribué à la création.</p>
+<!----------------------------------------------------------- ATELIER ------------------------------------------------------->
+<div class="row_simple" id="start">
+<div class="column_simple">
+		<p class="explication_text">Le deuxième projet vidéoludique dont j'ai fait partie était également un atelier MMI. 
+			La consigne était de réaliser un "Zelda Like" en quelques jours sur Unity (moteur de Jeu). Nous étions par 
+			groupe de 5 cette fois-ci. Crystal's Quest est un jeu post-apocalyptique où le héros peut voyager entre le présent 
+			en ruines et le passé encore intact ante-explosion. Le but est de retrouver les trois cristaux pour les ramener au professeur 
+			qui s'en servira pour annuler l'explosion dans le futur.</p>
+		<img class="gallerie_image" src="../../RESSOURCES/Couverture_Jeu_Vidéo.jpg" width="500px"/>
+</div>
 </div>
 
-<div class="jeu_ligne_case">
-	<a class="dut_projet" href="../../html/DUT MMI/scratch.html">
-		<img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Room 203.jpg"/>
-		<p class="cadre_sombre_texte"><span class="contour"> | </span>Room 203<span class="contour"> | </span></p>
-	</a>	
-	<a class="dut_projet" href="../../html/DUT MMI/crystal.html">
-		<img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Cristal's quest.jpg"/>
-		<p class="cadre_sombre_texte"><span class="contour"> | </span>Cristal's Quest<span class="contour"> | </span></p>
-	</a>
+<div class="row_simple">
+		<p class="explication_text">Sur ce projet je me suis occupée de tous la programmation en C# (qui était assez réduite mais 
+			restait un obstacle comme nous n'avions jamais eu de cours sur ce langage). J'ai aussi pris en charge la partie Level 
+			Design et la conception du menu et des paramètres qui l'accompagne.</p>
 </div>
-<div class="jeu_ligne_case">
-	<a class="dut_projet" href="../../html/DUT MMI/nanimo.html">
-		<img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Nanimo.jpg"/>
-		<p class="cadre_sombre_texte"><span class="contour"> | </span>Nanimo<span class="contour"> | </span></p>
-	</a>	
-	<a class=" invisible">
-		<img class="dut_projet_image" src="../../RESSOURCES/0 - Jeu/Cristal's quest.jpg"/>
-		<p class="cadre_sombre_texte"><span class="contour"> | </span>Cristal's Quest<span class="contour"> | </span></p>
-	</a>
+<div class="row_simple">
+	<div class="column_simple" id="half">
+		<p class="link_text">Pour essayer le jeu cliquez <a class="lien" href="https://alvina-dr.itch.io/cristals-quest">ici</a>.</p>
+	</div>
 </div>
+
 <!------------------------------------------------------ FOOTER ------------------------------------------------>
 <footer>
 	<!-------------------- BY ME --------------------------->
@@ -75,6 +71,5 @@
 </footer>
 
 <!--------------------------------------------------------------------------------------------------------------->
-
 	</body>
 </html>
