--- a/html/DUT MMI/scratch.html
+++ b/html/DUT MMI/scratch.html
@@ -31,9 +31,9 @@
 	</ul>
 </div>
 <!----------------------------------------------------------- ATELIER ------------------------------------------------------->
-<div class="row_simple">
+<div class="row_simple" id="start">
 	<div class="column_simple" id="half">
-		<p class="explication_text">Voilà le premier gros projet que l'on a eu à faire en groupe durant la première année du DUT MMI. Il fallait réaliser un jeu vidéo sur Scratch, un logiciel créé par le MIT pour rendre la programmation graphique et comprendre l'algorithmique. Nous étions quatre par groupes et ne connaissions encore personne.</p>
+		<p class="explication_text">Voilà le premier gros projet que l'on a eu à faire en groupe au début du DUT MMI. Il fallait réaliser un jeu vidéo sur Scratch, un logiciel créé par le MIT pour rendre la programmation graphique et comprendre l'algorithmique. Nous étions quatre par groupes et ne connaissions encore personne.</p>
 		<p class="explication_text">Après plusieurs heures de brainstorming nous avons décidé avec mon équipe de réaliser un jeu à la "Five Nights at Freddy's". Pour coller au thème qui était "Jamais 203", nous avons décidé de placer le joueur dans sa chambre d'hôtel n°203. Là, il est capable de regarder à travers la ventilation, par la fenêtre et par l'oeillet de la porte. Le but est de survivre toute la nuit sans être attaqué par les monstres qui se rapprochent peu à peu. Pour cela le joueur a plusieurs moyens de les repousser ou de les retenir.</p>
 	</div>
 	<div class="column-simple video" id="half">
@@ -59,7 +59,13 @@
 		<img class="gallerie_image" src="../../RESSOURCES/2 - Scratch/Animation Ventilation.gif"/>
 	</div>
 </div>
-		<p class="explication_text">Personnellement je me suis occupée de toute la partie design du jeu. Pour l'apparence des monstres on a décidé de reprendre celle du Silence dans Doctor Who (une célèbre série de science-fiction britannique). Après quelques modifications sur différents modèles nous avions les créatures dans plusieurs positions. J'ai réalisé toutes les scènes où se trouverait le joueur puis j'ai conçu des animations pour rendre le jeu plus immersif.</p>
+		<p class="explication_text">Personnellement je me suis occupée de toute la partie design du jeu. 
+			Pour l'apparence des monstres on a décidé de reprendre celle du Silence dans Doctor Who 
+			(une célèbre série de science-fiction britannique). Après quelques modifications sur différents modèles 
+			nous avions les créatures dans plusieurs positions. J'ai réalisé toutes les scènes où se trouverait le 
+			joueur puis j'ai conçu des animations pour rendre le jeu plus immersif.
+			Je me suis aussi beaucoup investi dans la partie algorithmique de Scratch où j'ai simplifié la majorité du "code".
+		</p>
 <!----------------------------------------------------------- IMAGES -------------------------------------------------------->
 <div class="carousel" data-flickity>
   <!-- foreground parallax layer -->
