--- a/html/DUT MMI/infographie.html
+++ b/html/DUT MMI/infographie.html
@@ -64,8 +64,9 @@
 		<img class="gallerie_image" src="../../RESSOURCES/1 - Infographie/RENDU 1.3.jpg"/>
 	</div>
 	<div class="column_simple" id="half">
-		<p class="explication_text">Puis comme il me restait du temps, j'ai aussi réalisé une cover d'album sur le thème d'Assassin's Creed Odyssey.</p>
-		<p class="explication_text">L'exercice était marrant et comme toujours, j'ai beaucoup appris en pratiquant.</p>
+		<p class="explication_text">Puis comme il me restait du temps, j'ai aussi réalisé une cover d'album sur le thème d'Assassin's Creed Odyssey. <br>
+			L'exercice était marrant et comme toujours, j'ai beaucoup appris en pratiquant.
+		</p>
 	</div>
 </div>
 
