maj header et footer général

--- a/html/DUT MMI/nanimo.html
+++ b/html/DUT MMI/nanimo.html
@@ -13,73 +13,61 @@
 	<link rel="stylesheet" href="../../css/style.css" id="theme-link">
 	<link rel="stylesheet" href="../../css/flickity.css">
 
-	<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-	<script src="../../js/flickity.pkgd.js"></script>
-	<script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-	<!--------------------------------------------------------- MENU ------------------------------------------------------>
-	<div class="navbar">
-		<div class="haut">
-			<a class="icone" href="../../index.html"> <img src="../../RESSOURCES/a.png" width="100%" /></a>
-			<h1 class="prénom">Alvina<h1>
-					<h2 class="nom">Damasio--Razafiarizaka<h2>
-		</div>
-		<ul>
-			<li><a href="../../index.html">ACCUEIL</a></li>
-			<!--li><a href="./html/dut mmi.html">DUT MMI</a></li-->
-			<li><a href="../../html/presentation.html">PRÉSENTATION</a></li>
-		</ul>
-	</div>
+<!--------------------------------------------------------- MENU ------------------------------------------------------>
+
+<iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
 	<!----------------------------------------------------------- ATELIER ------------------------------------------------------->
 	<div class="row_simple" id="start">
 		<div class="column_simple" id="half">
-			<p class="explication_text">C'est fin Janvier 2021 que j'ai participé à ma première Game Jam. Le thème était 
-				"Lost And Found". En équipe de cinq, en association avec deux élèves de l'INSERB, deux élèves en DUT MMI comme moi 
-				et un élève en licence pro Game Design / Level Design (IUT Bobigny), nous avons décidé de réaliser un jeu de puzzle.</p>
-			<p class="explication_text">Le but consiste à retrouver les animaux qui se sont échappés et à les remettre dans leurs enclos.
-				Seulement tous les animaux ne s'entendent pas bien entre eux. Il faut donc composer chaque enclos avec soin pour éviter
+			<p class="explication_text">C'est fin Janvier 2021 que j'ai participé à ma première Game Jam. Le thème était
+				"Lost And Found". En équipe de cinq, en association avec deux élèves de l'INSERB, deux élèves en DUT MMI
+				comme moi
+				et un élève en licence pro Game Design / Level Design (IUT Bobigny), nous avons décidé de réaliser un
+				jeu de puzzle.</p>
+			<p class="explication_text">Le but consiste à retrouver les animaux qui se sont échappés et à les remettre
+				dans leurs enclos.
+				Seulement tous les animaux ne s'entendent pas bien entre eux. Il faut donc composer chaque enclos avec
+				soin pour éviter
 				que la ferme ne devienne un véritable chaos.
 			</p>
-			<p class="explication_text">Sur ce projet j'ai participé à la partie design (animation des animaux, design 
-				de leurs sprites si nécessaire) puis à la conception des menus (pause, options, menu principal, crédits, etc...). J'ai aussi participé
+			<p class="explication_text">Sur ce projet j'ai participé à la partie design (animation des animaux, design
+				de leurs sprites si nécessaire) puis à la conception des menus (pause, options, menu principal, crédits,
+				etc...). J'ai aussi participé
 				à la création de prefabs d'animaux sur Unity.
 			</p>
 		</div>
 		<div class="column_simple video" id="half">
 			<p class="explication_text">Voilà le superbe trailer du jeu réalisé par Pauline Grellier !
 			</p>
-			<iframe class="gallerie_image" width="560" height="315" src="https://www.youtube.com/embed/cYzAFRk12po" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		</div>
-	</div> <!--fin de row-simple start-->
-	<div class="space"></div> <!--ESPACE-->
-	<div class="row_simple"> <!--LIEN VERS LE JEU-->
-		<div class="column_simple" id="half">
-			<p class="link_text">Pour essayer le jeu cliquez <a class="lien" href="https://shynamo.itch.io/nanimo">ici</a>.</p>
+			<iframe class="gallerie_image" width="560" height="315" src="https://www.youtube.com/embed/cYzAFRk12po"
+				frameborder="0"
+				allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+				allowfullscreen></iframe>
 		</div>
 	</div>
-	<div class="space"></div> <!--ESPACE-->
-	<!------------------------------------------------------ FOOTER ------------------------------------------------>
-	<footer>
-		<!-------------------- BY ME --------------------------->
-		<div class="by">
-			<p class="by_text">By Alvina DAMASIO--RAZAFIARIZAKA
-			<p></p>
-			<section class="social_menu">
-				<!------------------ ICONES RÉSEAUX -->
-				<ul>
-					<li><a href="https://www.linkedin.com/in/alvina-damasio-razafiarizaka-510a981b8"><i
-								class="fa fa-linkedin"></i></a></li>
-					<li><a href="https://www.instagram.com/alvina.j.dr/"><i class="fa fa-instagram"></i></a></li>
-					<li><a href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA"><i
-								class="fa fa-youtube"></i></a></li>
-				</ul>
-			</section>
+	<!--fin de row-simple start-->
+	<div class="space"></div>
+	<!--ESPACE-->
+	<div class="row_simple">
+		<!--LIEN VERS LE JEU-->
+		<div class="column_simple" id="half">
+			<p class="link_text">Pour essayer le jeu cliquez <a class="lien"
+					href="https://shynamo.itch.io/nanimo">ici</a>.</p>
 		</div>
+	</div>
+	<div class="space"></div>
+	<!--ESPACE-->
+<!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
-	</footer>
-
+<iframe class="include" src="../0commons/footer.html" seamless></iframe>
+	<!------------------------------------------------------ SCRIPTS ------------------------------------------------>
+	<script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+	<script src="../../js/flickity.pkgd.js"></script>
+	<script src="../../js/navbar.js"></script>
 	<!--------------------------------------------------------------------------------------------------------------->
 </body>
 
