--- a/html/INDEX/ecriture.html
+++ b/html/INDEX/ecriture.html
@@ -12,28 +12,11 @@
 		<link rel="stylesheet" href="../../css/dut mmi.css">
 		<link rel="stylesheet" href="../../css/flickity.css">
 
-	    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-	    <script src="../../js/flickity.pkgd.js"></script>
-	    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 <!--------------------------------------------------------- MENU ------------------------------------------------------>
-<div class="navbar">
-	<div class="haut">
-		<a class="icone" href="../../index.html"> <img  src="../../RESSOURCES/a.png" width="100%"/></a>
-		<h1 class="prénom">Alvina<h1>
-		<h2 class="nom">Damasio--Razafiarizaka<h2>
-	</div>	
-	<ul>
-		<li><a href="../../index.html">ACCUEIL</a></li>
- 		<!--li><a href="./html/dut mmi.html">DUT MMI</a></li-->
-		<li><a href="../../html/presentation.html">PRÉSENTATION</a></li>
-	</ul>
-</div>
 
-
-
-
+<iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
 <!--------------------------------------------------- PHOTOGRAPHIES ------------------------------------------------>
 <p class="presentation_text">Voilà quelques photos que j'ai prise.</p>
 
@@ -69,23 +52,14 @@
 </div>
 </div>
 
-<!------------------------------------------------------ FOOTER ------------------------------------------------>
-<footer>
-	<!-------------------- BY ME --------------------------->
-	<div class="by">
-		<p class="by_text">By Alvina DAMASIO--RAZAFIARIZAKA<p></p>
-			<section class="social_menu">
-				<!------------------ ICONES RÉSEAUX -->
-				<ul>
-					<li><a href="https://www.linkedin.com/in/alvina-damasio-razafiarizaka-510a981b8"><i class="fa fa-linkedin"></i></a></li>
-					<li><a href="https://www.instagram.com/alvina.j.dr/"><i class="fa fa-instagram"></i></a></li>
-					<li><a href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA"><i class="fa fa-youtube"></i></a></li>
-				  </ul>
-			</section>		
-	</div>
+<!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
-</footer>
-
+<iframe class="include" src="../0commons/footer.html" seamless></iframe>
+<!------------------------------------------------------ SCRIPTS ------------------------------------------------>
+<script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script src="../../js/flickity.pkgd.js"></script>
+<script src="../../js/navbar.js"></script>
 <!--------------------------------------------------------------------------------------------------------------->
 
 	</body>
