--- a/html/presentation.html
+++ b/html/presentation.html
@@ -8,27 +8,14 @@
 
 		<title>Alvina Damasio--Razafiarizaka | Projets Perso</title>
 
-		<link rel="stylesheet" href="../css/style.css" id="theme-link">
+		<link rel="stylesheet" href="../css/style.css">
 		<link rel="stylesheet" href="../css/flickity.css">
 
-	    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-	    <script src="../js/flickity.pkgd.js"></script>
-	    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 <!--------------------------------------------------------- MENU ------------------------------------------------------>
-<div class="navbar">
-	<div class="haut">
-		<a class="icone" href="../index.html"> <img  src="../RESSOURCES/a.png" width="100%"/></a>
-		<h1 class="prénom">Alvina<h1>
-		<h2 class="nom">Damasio--Razafiarizaka<h2>
-	</div>	
-	<ul>
-		<li><a href="../index.html">ACCUEIL</a></li>
- 		<!--li><a href="./html/dut mmi.html">DUT MMI</a></li-->
-		<li><a id="page_actuelle" href="../html/presentation.html">PRÉSENTATION</a></li>
-	</ul>
-</div>
+
+<iframe class="include fix" src="0commons/navbar.html" seamless></iframe>
 <!---------------------------------------------- TEXT PRESENTATION ------------------------------------------------>
 
 <div class="presentation_dut_mmi_case">
@@ -36,28 +23,18 @@
 		du Multimédia et de l'Internet (MMI).</p>
 	<p class="presentation_text">mail : alvinadr24@gmail.com</p>
 	
-	<p class="presentation_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt 
-		ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip 
-		ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla 
-		pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<p class="presentation_text">J'adore lire et écrire depuis que je suis petite. Dès que j'ai découvert les 
+		jeux vidéos (avec Pokémon Platine) j'ai voulu concevoir mes propres jeux, d'abord sur RPG Maker puis sur Unity. C'est à
+	travers eux d'ailleurs que j'ai rencontré Photoshop que je n'ai pas lâché depuis la sixième.</p>
 </div>
-<!------------------------------------------------------ FOOTER ------------------------------------------------>
-<footer>
-	<!-------------------- BY ME --------------------------->
-	<div class="by">
-		<p class="by_text">By Alvina DAMASIO--RAZAFIARIZAKA<p></p>
-			<section class="social_menu">
-				<!------------------ ICONES RÉSEAUX -->
-				<ul>
-					<li><a href="https://www.linkedin.com/in/alvina-damasio-razafiarizaka-510a981b8"><i class="fa fa-linkedin"></i></a></li>
-					<li><a href="https://www.instagram.com/alvina.j.dr/"><i class="fa fa-instagram"></i></a></li>
-					<li><a href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA"><i class="fa fa-youtube"></i></a></li>
-				  </ul>
-			</section>		
-	</div>
 
-</footer>
+<!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
+<iframe class="include" src="0commons/footer.html" seamless></iframe>
+<!------------------------------------------------------ SCRIPTS ------------------------------------------------>
+<script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script src="../js/flickity.pkgd.js"></script>
 <!--------------------------------------------------------------------------------------------------------------->
 
 	</body>
