--- a/html/INDEX/photomontage.html
+++ b/html/INDEX/photomontage.html
@@ -8,31 +8,17 @@
 
 		<title>Alvina Damasio--Razafiarizaka | Projets Perso</title>
 
-        <link rel="stylesheet" href="../../css/style.css" id="theme-link">
+        <link rel="stylesheet" href="../../css/style.css">
         <link rel="stylesheet" href="../../css/photomontage.css">
 		<link rel="stylesheet" href="../../css/flickity.css">
 
-	    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-	    <script src="../../js/flickity.pkgd.js"></script>
-	    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
 <!--------------------------------------------------------- MENU ------------------------------------------------------>
-<div class="navbar">
-	<div class="haut">
-		<a class="icone" href="../../index.html"> <img  src="../../RESSOURCES/a.png" width="100%"/></a>
-		<h1 class="prénom">Alvina<h1>
-		<h2 class="nom">Damasio--Razafiarizaka<h2>
-	</div>	
-	<ul>
-		<li><a href="../../index.html">ACCUEIL</a></li>
- 		<!--li><a href="./html/dut mmi.html">DUT MMI</a></li-->
-		<li><a href="../../html/presentation.html">PRÉSENTATION</a></li>
-	</ul>
-</div>
+
+<iframe class="include fix" src="../0commons/navbar.html" seamless></iframe>
+
 <!---------------------------------------------- CARROUSSEL PHOTOMONTAGES ------------------------------------------------>
-
-
 
 <div class="presentation_dut_mmi_case">
 	<p class="presentation_text">J'utilise photoshop depuis que j'ai onze ans et avec le temps j'ai commencé à réaliser des illustrations. Chacune d'elles raconte une histoire, même si dans la plupart des cas il n'y a que la couverture d'un livre.</p>
@@ -72,25 +58,19 @@
         <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P8.jpg"/>
         <p class="date_photomontage"><span class="contour"> | </span>Décembre 2020<span class="contour"> | </span></p>
     </a>
-
+    <a class="lien_photomontage">	
+        <img class="photomontage_image" src="../../RESSOURCES/0 - Photomontages/P9.jpg"/>
+        <p class="date_photomontage"><span class="contour"> | </span>Février 2021<span class="contour"> | </span></p>
+    </a>
 </div>
-<!------------------------------------------------------ FOOTER ------------------------------------------------>
-<footer>
-	<!-------------------- BY ME --------------------------->
-	<div class="by">
-		<p class="by_text">By Alvina DAMASIO--RAZAFIARIZAKA<p></p>
-			<section class="social_menu">
-				<!------------------ ICONES RÉSEAUX -->
-				<ul>
-					<li><a href="https://www.linkedin.com/in/alvina-damasio-razafiarizaka-510a981b8"><i class="fa fa-linkedin"></i></a></li>
-					<li><a href="https://www.instagram.com/alvina.j.dr/"><i class="fa fa-instagram"></i></a></li>
-					<li><a href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA"><i class="fa fa-youtube"></i></a></li>
-				  </ul>
-			</section>		
-	</div>
+<!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
-</footer>
-
+<iframe class="include" src="../0commons/footer.html" seamless></iframe>
+<!------------------------------------------------------ SCRIPTS ------------------------------------------------>
+<script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script src="../../js/flickity.pkgd.js"></script>
+<script src="../../js/navbar.js"></script>
 <!--------------------------------------------------------------------------------------------------------------->
 
 	</body>
