--- a/index.html
+++ b/index.html
@@ -9,27 +9,14 @@
 
 		<title>Alvina Damasio--Razafiarizaka | Portfolio</title>
 
-		<link rel="stylesheet" href="css/style.css" id="theme-link">
+		<link rel="stylesheet" href="css/style.css">
 		<link rel="stylesheet" href="css/flickity.css">
 
-	    <script src="https://kit.fontawesome.com/68b1f887b3.js" crossorigin="anonymous"></script>
-	    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
-	    <script src="js/flickity.pkgd.js"></script>
 	</head>
 	<body>
 <!--------------------------------------------------------- MENU ------------------------------------------------------>
-		<div class="navbar">
-			<div class="haut">
-				<a class="icone" href="index.html"> <img  src="RESSOURCES/a.png" width="100%"/></a>
-				<h1 class="prénom">Alvina<h1>
-				<h2 class="nom">Damasio--Razafiarizaka<h2>
-			</div>	
-			<ul>
-				<li><a id="page_actuelle" href="index.html">ACCUEIL</a></li>
- 				<!--li><a href="./html/dut mmi.html">DUT MMI</a></li-->
- 				<li><a href="./html/presentation.html">PRÉSENTATION</a></li>
-			</ul>
-		</div>
+
+<iframe class="include fix" src="html/0commons/navbar.html" seamless></iframe>
 <!------------------------------------------------------ PROJETS ------------------------------------------------>
 
 	<div class="present_bande">
@@ -99,22 +86,13 @@
 			<a class="DUT_MMI_a" href="DUT MMI.html"> <img class="DUT_MMI_image" src="RESSOURCES/Projets MMI - Zelda Like.jpg"/></a>
 </div-->
 
-<!------------------------------------------------------ FOOTER ------------------------------------------------>
-<footer>
-	<!-------------------- BY ME --------------------------->
-	<div class="by">
-		<p class="by_text">By Alvina DAMASIO--RAZAFIARIZAKA<p></p>
-			<section class="social_menu">
-				<!------------------ ICONES RÉSEAUX -->
-				<ul>
-					<li><a href="https://www.linkedin.com/in/alvina-damasio-razafiarizaka-510a981b8"><i class="fa fa-linkedin"></i></a></li>
-					<li><a href="https://www.instagram.com/alvina.j.dr/"><i class="fa fa-instagram"></i></a></li>
-					<li><a href="https://www.youtube.com/channel/UCHbkynbDO8irEGk104XIbMA"><i class="fa fa-youtube"></i></a></li>
-				  </ul>
-			</section>		
-	</div>
+<!------------------------------------------------------ FOOTER ------------------------------------------------------>
 
-</footer>
+<iframe class="include" src="html/0commons/footer.html" seamless></iframe>
+<!------------------------------------------------------ SCRIPTS ------------------------------------------------>
+
+<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+<script src="js/flickity.pkgd.js"></script>
 
 <!--------------------------------------------------------------------------------------------------------------->
 	</body>
